ci: use jdk 20 with --enable-preview